--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
+    <string name="restapi_get_homework">https://telbelahfa.execute-api.us-east-1.amazonaws.com/prodblue/stc/homework/</string>
+
     <string name="app_name">St. Catherine School</string>
     <string name="title_home">Homework</string>
     <string name="title_dashboard">Activities</string>
     <string name="title_notifications">Lunch Menu</string>
+
+    <string name="sample_ad">Maple Leaf Ace Hardware - Serving Maple Leaf since 10,000 B.C.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_grades_fragment">Hello grades fragment</string>
