just about ready to submit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_dashboard">Activities</string>
     <string name="title_notifications">Lunch Menu</string>
 
-    <string name="sample_ad">Maple Leaf Ace Hardware - Serving Maple Leaf since 10,000 B.C.</string>
+    <string name="sample_ad">Loading...</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_grades_fragment">Hello grades fragment</string>
