--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">St. Catherine School</string>
     <string name="title_home">Homework</string>
     <string name="title_dashboard">Activities</string>
-    <string name="title_notifications">Lunch Menu</string>
+    <string name="lunch_title">Lunch Menu</string>
 
     <string name="sample_ad">Loading…</string>
 
