--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="hello_activities_fragment">Hello activities fragment</string>
     <string name="hello_lunch_fragment">Hello lunch fragment</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="stcBaseUrl">https://103hytduv6.execute-api.us-west-2.amazonaws.com/dev/</string>
 
 </resources>
