Purge old fragments and start porting over new api's. Updated Lunch API. Styled ads with MaterialCards. Styled schedule list items as MaterialCards.

--- a/locallinkschool/src/main/res/values/strings.xml
+++ b/locallinkschool/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="lunch_title">Lunch Menu</string>
 
     <string name="loading">Loading…</string>
+    <string name="school_schedule_title">School Schedule</string>
 
 </resources>
