Added Twitter feed support Back Button works properly now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="hello_lunch_fragment">Hello lunch fragment</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="stcBaseUrl">https://103hytduv6.execute-api.us-west-2.amazonaws.com/dev/</string>
+    <string name="twitter_name">St_Cath_Seattle</string>
 
 </resources>
