--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">St. Catherine School</string>
     <string name="school_url">https://www.stcatherineschool.net/</string>
-    <string name="stcBaseUrl">https://103hytduv6.execute-api.us-west-2.amazonaws.com/dev/</string>
+    <string name="stcBaseUrl">https://55lhd3o9k4.execute-api.us-west-1.amazonaws.com/dev/</string>
     <string name="twitter_name">St_Cath_Seattle</string>
 </resources>
