Migrate to Kotlin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="school_url">https://www.stcatherineschool.net/</string>
     <string name="stcBaseUrl">https://55lhd3o9k4.execute-api.us-west-1.amazonaws.com/dev/</string>
     <string name="twitter_name">St_Cath_Seattle</string>
+    <string name="navigation_header">Navigation Header</string>
 </resources>
